--- a/integrador atualizado/caixanovo/css/caixa.css
+++ b/integrador atualizado/caixanovo/css/caixa.css
@@ -53,18 +53,13 @@ body {
   height: 870;
 }
 
-.caixa {
+.caixa1 {
   border: 1px transparent solid;
   width: 100%;
   height: 800px;
   justify-content: center;
   display: flex;
   align-items: center;
-}
-
-.Caixa{
-    display: flex;
-    gap: 15px;
 }
 
 .atalhos {
@@ -207,16 +202,20 @@ body {
   border: 3px #1565c0 solid;
   background-color: #fff;
   border-radius: 25px;
-  width: 1150px;
+  width: 90vh;
+  max-width: 100vh;
   height: 700px;
   margin: auto;
+  max-width: 90vh;
   margin-left: 2%;
   margin-top: 20px;
+  display: flex;
+  gap: 15px;
 }
 
 .NumeroDeProdutos {
   border: 1px transparent solid;
-  width: 40px;
+  width: 3vh;
   height: 67vh;
   flex-direction: column-reverse;
   overflow-y: hidden;
@@ -245,69 +244,6 @@ body {
 }
 
 .numeros {
-    margin: 0;
-    padding: 5px;
-    width: 30px;
-    text-align: center;
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-
-.NomeDoProduto{
-    border: 1px transparent solid;
-    width: 200px;
-    height: 67vh;
-    flex-direction: column-reverse;
-    overflow-y: hidden;
-    text-align: center;
-}
-
-.NomeDoProduto-title__main{
-    border: 1px transparent solid;
-    width: 40;
-    height: 30px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    text-align: center;
-}
-
-.NomeDoProduto-title{
-    font-size: 20px;
-
-}
-
-.NomeDoProdutos-Id{
-    margin: 0;
-    padding: 5px;
-    width: 30px;
-    text-align: center;
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-
-.DescricaoDoProduto{
-  border: 1px transparent solid;
-  width: 55vh;
-  height: 67vh;
-  flex-direction: column-reverse;
-  overflow-y: hidden;
-}
-
-.DescricaoDoProduto-title__main{
-  border: 1px transparent solid;
-  height: 30px;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  text-align: center;
-}
-
-.DescricaoDoProduto-title{
-  font-size: 20px;
-}
-
-.DescricaoDoProdutos-Id{
   margin: 0;
   padding: 5px;
   width: 30px;
@@ -316,16 +252,16 @@ body {
   margin-bottom: 5px;
 }
 
-.QuantidadeDoProduto{
+.NomeDoProduto {
   border: 1px transparent solid;
-  width: 12vh;
+  width: 30vh;
   height: 67vh;
   flex-direction: column-reverse;
   overflow-y: hidden;
   text-align: center;
 }
 
-.QuantidadeDoProduto-title__main{
+.NomeDoProduto-title__main {
   border: 1px transparent solid;
   height: 30px;
   justify-content: center;
@@ -334,11 +270,11 @@ body {
   text-align: center;
 }
 
-.QuantidadeDoProduto-title{
+.NomeDoProduto-title {
   font-size: 20px;
 }
 
-.QuantidadeDoProduto-Id{
+.NomeDoProdutos-Id {
   margin: 0;
   padding: 5px;
   width: 30px;
@@ -347,16 +283,15 @@ body {
   margin-bottom: 5px;
 }
 
-.ValorDoProduto{
+.DescricaoDoProduto {
   border: 1px transparent solid;
-  width: 12vh;
+  width: 40vh;
   height: 67vh;
   flex-direction: column-reverse;
   overflow-y: hidden;
-  text-align: center;
 }
 
-.ValorDoProduto-title__main{
+.DescricaoDoProduto-title__main {
   border: 1px transparent solid;
   height: 30px;
   justify-content: center;
@@ -365,11 +300,11 @@ body {
   text-align: center;
 }
 
-.ValorDoProduto-title{
+.DescricaoDoProduto-title {
   font-size: 20px;
 }
 
-.ValorDoProduto-Id{
+.DescricaoDoProdutos-Id {
   margin: 0;
   padding: 5px;
   width: 30px;
@@ -378,11 +313,73 @@ body {
   margin-bottom: 5px;
 }
 
-.txtinfoscaixa{
+.QuantidadeDoProduto {
+  border: 1px transparent solid;
+  width: 10vh;
+  height: 67vh;
+  flex-direction: column-reverse;
+  overflow-y: hidden;
+  text-align: center;
+}
+
+.QuantidadeDoProduto-title__main {
+  border: 1px transparent solid;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  text-align: center;
+}
+
+.QuantidadeDoProduto-title {
   font-size: 20px;
 }
 
-.centralizarqtdgeral-main{
+.QuantidadeDoProduto-Id {
+  margin: 0;
+  padding: 5px;
+  width: 30px;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.ValorDoProduto {
+  border: 1px transparent solid;
+  width: 10vh;
+  height: 67vh;
+  flex-direction: column-reverse;
+  overflow-y: hidden;
+  text-align: center;
+}
+
+.ValorDoProduto-title__main {
+  border: 1px transparent solid;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  text-align: center;
+}
+
+.ValorDoProduto-title {
+  font-size: 20px;
+}
+
+.ValorDoProduto-Id {
+  margin: 0;
+  padding: 5px;
+  width: 30px;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.txtinfoscaixa {
+  font-size: 20px;
+}
+
+.centralizarqtdgeral-main {
   border: 1px transparent solid;
   text-align: center;
   display: flex;
@@ -391,6 +388,6 @@ body {
   height: 7vh;
 }
 
-.centralizarqtdgeral{
+.centralizarqtdgeral {
   font-size: 50px;
 }
